# databow

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cliff.toml  pyproject.toml  zensical.toml
.github/workflows/: ci.yaml
docs/: databases.md  index.md  installation.md  reference.md
src/: cli.rs  database.rs  highlighter.rs  main.rs  output.rs  repl.rs  table.rs
tests/: integration_test.rs
themes/: catppuccin-latte.tmTheme  catppuccin-mocha.tmTheme
