[package]
name = "adbcli"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
adbc_core = "0.22.0"
adbc_driver_manager = "0.22.0"
arrow = { version = "57.2.0", features = ["prettyprint"] }
arrow-array = "57.2.0"
arrow-cast = "57.2.0"
arrow-schema = "57.2.0"
clap = "4.5.54"
comfy-table = "7.2.2"
nu-ansi-term = "0.50.3"
reedline = "0.45.0"
syntect = "5.3.0"
terminal-colorsaurus = "1.0.3"
