[package]
name = "adbcli"
description = "A command-line tool for querying databases via ADBC"
version = "0.1.0-alpha"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/columnar-tech/adbcli"
keywords = ["database", "sql", "adbc"]
categories = ["command-line-utilities", "database"]
include = ["/src", "/themes", "build.rs", "LICENSE", "README.md"]

[dependencies]
adbc_core = "0.22.0"
adbc_driver_manager = "0.22.0"
arrow = "57.2.0"
arrow-array = "57.2.0"
arrow-cast = "57.2.0"
arrow-schema = "57.2.0"
clap = { version = "4.5.54", features = ["derive"] }
comfy-table = "7.2.2"
nu-ansi-term = "0.50.3"
reedline = "0.45.0"
syntect = "5.3.0"
terminal-colorsaurus = "1.0.3"

[dev-dependencies]
tempfile = "3.14.0"
